어드민추가 로그인 수정

--- a/src/pages/LoginPage.html
+++ b/src/pages/LoginPage.html
@@ -1,26 +1,127 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+        .login-container {
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .login-container .login_area {
+            width: 400px;
+            padding: 20px;
+            border: 2px solid #000;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .login-container .login_area h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
+        }
+
+        .login-container .login_area .input-group {
+            margin-bottom: 15px;
+            position: relative;
+        }
+
+        .login-container .login_area .input-group input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+            outline: none;
+        }
+
+        .login-container .login_area .input-group label {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            font-size: 14px;
+            color: #999;
+            transition: 0.3s ease;
+        }
+
+        .login-container .login_area .input-group input:focus + label,
+        .login-container .login_area .input-group input:not(:placeholder-shown) + label {
+            top: -10px;
+            left: 5px;
+            font-size: 12px;
+            color: #166cea;
+            background: #fff;
+            padding: 0 5px;
+        }
+
+        .login-container .login_area .btn {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #166cea;  
+            cursor: pointer;
+            transition: 0.3s ease;
+        }
+
+        .login-container .login_area .btn:hover {
+            background-color: #0d5bb5;
+        }
+
+        .login-container .login_area .options {
+            margin-top: 20px;
+        }
+
+        .login-container .login_area .options a {
+            text-decoration: none;
+            font-size: 14px;
+            color: #166cea;
+            margin: 0 10px;
+            cursor: pointer;
+        }
+
+        .login-container .login_area .options a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
 <body>
-  <section class="login">
-    <div class="login_box">
-      <div class="left">
-        <div class="top_link"><a href="#"><img src="https://drive.google.com/u/0/uc?id=16U__U5dJdaTfNGobB_OpwAJ73vM50rPV&export=download" alt="">Return home</a></div>
-        <div class="contact">
-          <form action="">
-            <h3>SIGN IN</h3>
-            <input type="text" placeholder="USERNAME">
-            <input type="text" placeholder="PASSWORD">
-            <button class="submit">LET'S GO</button>
-          </form>
+    <main>
+        <div class="login-container">
+            <div class="login_area">
+                <h2>로그인</h2>
+                <form id="loginForm" onsubmit="return false;">
+                    <div class="input-group">
+                        <input type="text" id="userId" name="userId" required autocomplete="off" placeholder=" ">
+                        <label for="userId">아이디</label>
+                    </div>
+                    <div class="input-group">
+                        <input type="password" id="password" name="password" required placeholder=" ">
+                        <label for="password">비밀번호</label>
+                    </div>
+                    <button type="submit" class="btn">로그인</button>
+                </form>
+                <div class="options">
+                    <a href="#" id="findId">아이디 찾기</a>
+                    <a href="#" id="findPassword">비밀번호 찾기</a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="right">
-        <div class="right-text">
-          <h2>LONYX</h2>
-          <h5>A UX BASED CREATIVE AGENCEY</h5>
-        </div>
-        <div class="right-inductor"><img src="https://lh3.googleusercontent.com/fife/ABSRlIoGiXn2r0SBm7bjFHea6iCUOyY0N2SrvhNUT-orJfyGNRSMO2vfqar3R-xs5Z4xbeqYwrEMq2FXKGXm-l_H6QAlwCBk9uceKBfG-FjacfftM0WM_aoUC_oxRSXXYspQE3tCMHGvMBlb2K1NAdU6qWv3VAQAPdCo8VwTgdnyWv08CmeZ8hX_6Ty8FzetXYKnfXb0CTEFQOVF4p3R58LksVUd73FU6564OsrJt918LPEwqIPAPQ4dMgiH73sgLXnDndUDCdLSDHMSirr4uUaqbiWQq-X1SNdkh-3jzjhW4keeNt1TgQHSrzW3maYO3ryueQzYoMEhts8MP8HH5gs2NkCar9cr_guunglU7Zqaede4cLFhsCZWBLVHY4cKHgk8SzfH_0Rn3St2AQen9MaiT38L5QXsaq6zFMuGiT8M2Md50eS0JdRTdlWLJApbgAUqI3zltUXce-MaCrDtp_UiI6x3IR4fEZiCo0XDyoAesFjXZg9cIuSsLTiKkSAGzzledJU3crgSHjAIycQN2PH2_dBIa3ibAJLphqq6zLh0qiQn_dHh83ru2y7MgxRU85ithgjdIk3PgplREbW9_PLv5j9juYc1WXFNW9ML80UlTaC9D2rP3i80zESJJY56faKsA5GVCIFiUtc3EewSM_C0bkJSMiobIWiXFz7pMcadgZlweUdjBcjvaepHBe8wou0ZtDM9TKom0hs_nx_AKy0dnXGNWI1qftTjAg=w1920-h979-ft" alt=""></div>
-      </div>
-    </div>
-  </section>
+    </main>
 </body>
 </html>
