--- a/src/css/index.html
+++ b/src/css/index.html
@@ -110,9 +110,73 @@
 			width: 50%;
 			height: 100%;
 			background-color: black;
-			z-index:30;
+			z-index:3;
+
+			display: flex;
 		}
 
+		.main-container .main-content .main-page .main-action-area {
+			width: 100%;
+			height: 300px;
+			background-color: black;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-title {
+			justify-content: start;
+			width: 100%;
+			background-color: black;
+			color: #fff;
+			font-size: 30px;
+			font-weight: bold;
+			text-align: center;
+			line-height: 100px;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content {
+			width: 100%;
+			height: 100%;
+			background-color: black;
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item {
+			margin: 20px;
+			width: 100%;
+			height: 300px;
+			background-color: white;
+			border-radius: 20px;
+			border: 2px solid #fff;
+
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			cursor: pointer;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .icon {
+			width: 100px;
+			height: 100px;
+			background-size: 100%;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .title {
+			color: #000;
+			font-size: 20px;
+			font-weight: bold;
+			text-align: center;
+			line-height: 100px;
+
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(1) .icon {
+			background-image: url('./icon/notice.png');
+		}
 
 	</style>
 </head>
@@ -137,6 +201,25 @@
 			<!-- <div class="main-content-devlog">
 				1234
 			</div> -->
+
+						
+			<div class="main-page">
+				<div class="main-action-area">
+					<div class="main-action-area-title">
+						주요 기능(Features)
+					</div>
+					<div class="main-action-area-content">
+						<div class="main-action-area-content-item">
+							<div class="icon"></div>
+							<div class="title">Notice</div>
+							<div class="content">Notice Board</div>
+						</div>
+						<div class="main-action-area-content-item">456</div>
+						<div class="main-action-area-content-item">789</div>
+						<div class="main-action-area-content-item">101</div>
+					</div>
+				</div>
+			</div>
 
 
 			<!-- hexagon 영역 -->
@@ -516,24 +599,7 @@
 				</div> 
 			</div><!-- hexagon 영역 끝 -->
 
-			<!-- 
-			hexagon-container와 main-page가 서로 겹치지 않게 하려면:
-			
-			1. main-page에도 position: absolute를 주고
-			2. top 속성으로 hexagon-container 아래쪽에 위치하도록 설정하면 됩니다.
-			
-			.main-container .main-content .main-page {
-				position: absolute;
-				top: 100vh; /* hexagon-container 높이만큼 아래로 */
-				width: 50%;
-				height: 100%;
-				background-color: purple;
-				z-index: 30;
-			}
-			-->
-			<div class="main-page">
 
-			</div>
 
 		</div>
 
