--- a/src/css/index.html
+++ b/src/css/index.html
@@ -134,7 +134,6 @@
 
 		.main-container .main-content .main-page .main-action-area .main-action-area-content {
 			width: 100%;
-			height: 100%;
 			background-color: black;
 			display: flex;
 			flex-direction: row;
@@ -142,6 +141,7 @@
 			align-items: center;
 		}
 
+		/** main 주요 기능 item 설정*/
 		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item {
 			margin: 20px;
 			width: 100%;
@@ -167,15 +167,103 @@
 
 		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .title {
 			color: #000;
-			font-size: 20px;
+			font-size: 30px;
 			font-weight: bold;
 			text-align: center;
-			line-height: 100px;
-
 		}
 
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .content {
+			color: #999;
+			font-size: 20px;
+			text-align: center;
+		}
+
+		/** main - 주요 기능 icon 영역*/
 		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(1) .icon {
 			background-image: url('./icon/notice.png');
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(2) .icon {
+			background-image: url('./icon/intro.png');
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(3) .icon {
+			background-image: url('./icon/chat.png');
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(4) .icon {
+			background-image: url('./icon/board.png');
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-list {
+			width: 100%;
+			height: 100%;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-list .calout{
+			padding: 20px;
+			width: 100%;
+			color: #fff;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-list .calout .title {
+			font-size: 30px;
+			font-weight: bold;
+			text-align: left;
+		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-list .list {
+			width: 100%;
+			padding: 20px;
+		}
+
+		.list .notice-item {
+			margin-bottom: 10px;
+			width: 100%;
+			height: 100px;
+			border-radius: 20px;
+			border: 2px solid #fff;
+
+			display: flex;
+			flex-direction: row;
+			justify-content: start;
+			align-items: center;
+
+			
+			cursor: pointer;
+		}
+
+		.list .notice-item .notice-icon {
+			margin: 20px;
+			width: 60px;
+			height: 60px;
+			background-image: url('./icon/notice-white.png');
+			background-size: 100%;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
+
+		.list .notice-item .notice-content {
+
+			padding-right: 20px;
+			width: 90%;
+			height: 100%;
+
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+
+			color: #fff;
+			font-size: 20px;
+			font-weight: bold;
+		}
+
+		.list .notice-item .notice-content .notice-title {
+			width: 80%;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			overflow: hidden;
 		}
 
 	</style>
@@ -214,9 +302,63 @@
 							<div class="title">Notice</div>
 							<div class="content">Notice Board</div>
 						</div>
-						<div class="main-action-area-content-item">456</div>
-						<div class="main-action-area-content-item">789</div>
-						<div class="main-action-area-content-item">101</div>
+						<div class="main-action-area-content-item">
+							<div class="icon"></div>
+							<div class="title">Intro</div>
+							<div class="content">Introduction</div>
+						</div>
+						<div class="main-action-area-content-item">
+							<div class="icon"></div>
+							<div class="title">Chat</div>
+							<div class="content">Chatting</div>
+						</div>
+						<div class="main-action-area-content-item">
+							<div class="icon"></div>
+							<div class="title">Board</div>
+							<div class="content">Board Comuntiy</div>
+						</div>
+					</div>
+					<!--main action 기능 보이기 -->
+					<div class="main-action-area-list">
+						<div class="calout">
+							<div class="title">title</div>
+							<div class="content">content</div>
+						</div>
+						<div class="list">
+							<div class="notice-item">
+								<div class="notice-icon"></div>
+								<div class="notice-content">
+									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="notice-create">2025-01-01</div>
+								</div>
+							</div>
+
+							<div class="notice-item">
+								<div class="notice-icon"></div>
+								<div class="notice-content">
+									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="notice-create">2025-01-01</div>
+								</div>
+							</div>
+
+							<div class="notice-item">
+								<div class="notice-icon"></div>
+								<div class="notice-content">
+									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="notice-create">2025-01-01</div>
+								</div>
+							</div>
+
+							<div class="notice-item">
+								<div class="notice-icon"></div>
+								<div class="notice-content">
+									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="notice-create">2025-01-01</div>
+								</div>
+							</div>
+						</div>
+
+
 					</div>
 				</div>
 			</div>
