--- a/src/css/index.html
+++ b/src/css/index.html
@@ -144,8 +144,8 @@
 		/** main 주요 기능 item 설정*/
 		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item {
 			margin: 20px;
-			width: 100%;
-			height: 300px;
+			width: 300px;
+            height: 400px;
 			background-color: white;
 			border-radius: 20px;
 			border: 2px solid #fff;
@@ -154,8 +154,21 @@
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
+
+			transition: 0.5s;
 			cursor: pointer;
 		}
+
+		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:hover {
+			border: 2px solid #000;
+            transform: translate(-60px, -60px);
+            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15),
+            40px 40px 0 #fff,
+            50px 50px 20px rgba(0, 0, 0, 0.15),
+            80px 80px 0 #fff,
+            80px 80px 40px rgba(0, 0, 0, 0.15),
+            120px 120px 0px rgba(0, 0, 0, 0.1);
+        }
 
 		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .icon {
 			width: 100px;
