--- a/src/css/main.html
+++ b/src/css/main.html
@@ -6,295 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 
 	<style>
-        :root {
-            --background-color: rgba(0, 0, 0, 0.5);
-        }
-		/* .main-container {
-			position: absolute;
-			top:0;
-			left:0;
-			width: 100vw;
-			height: 100vh;
-			background-color: #000;
-			z-index: 1;
-		} */
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-		/* 상단 배너 영역 */
-		.main-container .main-baner {
-			position: fixed;
-			top:0;
-			left:0;
-
-			display: flex;
-			flex-direction: column;
-			width: 100vw;
-			height: 800px;
-            z-index: 2;
-		}
-
-		.main-container .main-baner .first-row {
-			width: 100%;
-			display: flex;
-			justify-content: space-between;
-			height: 400px;
-		}
-
-		.main-container .main-baner .second-row {
-			width: 100%;
-			display: flex;
-			justify-content: space-between;
-			height: 400px;
-		}
-
-		.main-container .main-baner .first-row .main-baner-left {
-			width: 100%;
-			background-color: #fff;
-		}
-
-		.main-container .main-baner .first-row .main-baner-center {
-			width: 100%;
-			background-image: url('./img/main1.gif');
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-		}
-
-		.main-container .main-baner .first-row .main-baner-right {
-			width:100%;
-			background-image: url('./img/main2.gif');
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-		}
-
-		.main-container .main-baner .second-row .main-baner-left {
-			width: 100%;
-			background-image: url('./img/main3.gif');
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-		}
-
-		.main-container .main-baner .second-row .main-baner-center {
-			width:100%;
-			background-image: url('./img/main4.gif');
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-		}
-
-		.main-container .main-baner .second-row .main-baner-right {
-			width: 100%;
-			background-color: #fff;
-		}
-
-
-		/** main content 영역*/
-		.main-container .main-content {
-			position: relative;
-			margin-top: 800px; /* first-row + second-row height */
-            width: 100vw;
-			height: 3000px;
-
-			display: flex;
-			justify-content: center;
-			background-color: var(--background-color);
-            overflow: hidden;
-			z-index: 4;
-		}
-
-		.main-content .main-content-introduction {
-			width: 100%;
-			height:300px;
-			background-color: var(--background-color);
-			z-index: 3;
-		}
-
-		.main-container .main-content .main-page {
-			position: absolute;
-			margin-top: 300px;
-			width: 100vw;
-			height: 100%;
-			background-color: rgba(0, 0, 0, 0.15);
-			z-index:3;
-
-			display: flex;
-		}
-
-		.main-container .main-content .main-page .main-action-area {
-			width: 100%;
-			height: 650px;
-			background-color: rgba(0, 0,0,0.8);
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-title {
-			justify-content: start;
-			width: 100%;
-			background-color: var(--background-color);
-			color: #fff;
-			font-size: 50px;
-			font-weight: bold;
-			text-align: center;
-			line-height: 100px;
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content {
-			width: 100%;
-			background-color: var(--background-color);
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			align-items: center;
-		}
-
-		/** main 주요 기능 item 설정*/
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item {
-			margin: 20px;
-			width: 300px;
-            height: 400px;
-			background-color: white;
-			border-radius: 20px;
-			border: 2px solid #fff;
-
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-
-			transition: 0.5s;
-			cursor: pointer;
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:hover {
-			border: 2px solid #000;
-            transform: translate(-60px, -60px);
-            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15),
-            40px 40px 0 #fff,
-            50px 50px 20px rgba(0, 0, 0, 0.15),
-            80px 80px 0 #fff,
-            80px 80px 40px rgba(0, 0, 0, 0.15),
-            120px 120px 0px rgba(0, 0, 0, 0.1);
-        }
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .icon {
-			width: 100px;
-			height: 100px;
-			background-size: 100%;
-			background-position: center;
-			background-repeat: no-repeat;
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .title {
-			color: #000;
-			font-size: 30px;
-			font-weight: bold;
-			text-align: center;
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item .content {
-			color: #999;
-			font-size: 20px;
-			text-align: center;
-		}
-
-		/** main - 주요 기능 icon 영역*/
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(1) .icon {
-			background-image: url('./icon/notice.png');
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(2) .icon {
-			background-image: url('./icon/intro.png');
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(3) .icon {
-			background-image: url('./icon/chat.png');
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-content .main-action-area-content-item:nth-child(4) .icon {
-			background-image: url('./icon/board.png');
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-list {
-			width: 100%;
-			height: 100%;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-list .calout{
-			padding: 20px;
-			width: 50%;
-			color: #fff;
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-list .calout .title {
-			font-size: 50px;
-			font-weight: bold;
-			text-align: left;
-		}
-
-		.main-container .main-content .main-page .main-action-area .main-action-area-list .list {
-			width: 50%;
-			padding: 20px;
-		}
-
-		.list .notice-item {
-			margin-bottom: 10px;
-			width: 100%;
-			height: 100px;
-			border-radius: 20px;
-			border: 2px solid #fff;
-
-			display: flex;
-			flex-direction: row;
-			justify-content: start;
-			align-items: center;
-
-			
-			cursor: pointer;
-		}
-
-		.list .notice-item .notice-icon {
-			margin: 20px;
-			width: 60px;
-			height: 60px;
-			background-image: url('./icon/notice-white.png');
-			background-size: 100%;
-			background-position: center;
-			background-repeat: no-repeat;
-		}
-
-		.list .notice-item .notice-content {
-
-			padding-right: 20px;
-			width: 90%;
-			height: 100%;
-
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-			align-items: center;
-
-			color: #fff;
-			font-size: 20px;
-			font-weight: bold;
-		}
-
-		.list .notice-item .notice-content .notice-title {
-			width: 80%;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			overflow: hidden;
-		}
 
 	</style>
 </head>
@@ -315,7 +27,20 @@
 			</div>
 		</div>
 		<div class="main-content">
-			<div class="main-content-introduction"></div>
+
+            <!-- 소개 영역 -->
+			<div class="main-content-introduction">
+                <div class="content">
+                    1234
+                </div>
+                <div class="content-image">
+                    
+                </div>
+                <div class="main-content-introduction-right">
+                    5678
+                </div>
+            </div>
+
 			<!-- <div class="main-content-devlog">
 				1234
 			</div> -->
