--- a/src/css/main.html
+++ b/src/css/main.html
@@ -30,14 +30,24 @@
 
             <!-- 소개 영역 -->
 			<div class="main-content-introduction">
+                <!-- 소개글 text 영역-->
                 <div class="content">
-                    1234
+                    <div>
+                        <span class="title">혁신적인 솔루션</span>
+                    <span class="subtitle">새로운 가치를 창조하다</span>
                 </div>
+                    <p class="description">
+                        최신 기술과 창의적인 아이디어로<br>
+                        고객의 니즈를 충족시키는<br>
+                        맞춤형 서비스를 제공합니다
+                    </p>
+                </div>
+                <!-- 소개글 , 이미지 영역-->
                 <div class="content-image">
-                    
+
                 </div>
+                <!-- 소개글 , 가운데 자르기-->
                 <div class="main-content-introduction-right">
-                    5678
                 </div>
             </div>
 
