--- a/src/css/main.html
+++ b/src/css/main.html
@@ -63,27 +63,28 @@
 						주요 기능(Features)
 					</div>
 					<div class="main-action-area-content">
-						<div class="main-action-area-content-item">
-							<div class="icon"></div>
-							<div class="title">Notice</div>
-							<div class="content">Notice Board</div>
+						<div class="main-action-area-content-item" data-type="notice">
+							<div class="icon" onclick="mainActionListEvent(this)" data-type="notice"></div>
+							<div class="title" onclick="mainActionListEvent(this)" data-type="notice">Notice</div>
+							<div class="content" onclick="mainActionListEvent(this)" data-type="notice">Notice Board</div>
 						</div>
-						<div class="main-action-area-content-item">
-							<div class="icon"></div>
-							<div class="title">Intro</div>
-							<div class="content">Introduction</div>
+						<div class="main-action-area-content-item" data-type="intro">
+							<div class="icon" onclick="mainActionListEvent(this)" data-type="intro"></div>
+							<div class="title" onclick="mainActionListEvent(this)" data-type="intro">Intro</div>
+							<div class="content" onclick="mainActionListEvent(this)" data-type="intro">Introduction</div>
 						</div>
-						<div class="main-action-area-content-item">
-							<div class="icon"></div>
-							<div class="title">Chat</div>
-							<div class="content">Chatting</div>
+						<div class="main-action-area-content-item" data-type="chat">
+							<div class="icon" onclick="mainActionListEvent(this)" data-type="chat"></div>
+							<div class="title" onclick="mainActionListEvent(this)" data-type="chat">Chat</div>
+							<div class="content" onclick="mainActionListEvent(this)" data-type="chat">Chatting</div>
 						</div>
-						<div class="main-action-area-content-item">
-							<div class="icon"></div>
-							<div class="title">Board</div>
-							<div class="content">Board Comuntiy</div>
+						<div class="main-action-area-content-item" data-type="board">
+							<div class="icon" onclick="mainActionListEvent(this)" data-type="board"></div>
+							<div class="title" onclick="mainActionListEvent(this)" data-type="board">Board</div>
+							<div class="content" onclick="mainActionListEvent(this)" data-type="board">Board Comuntiy</div>
 						</div>
 					</div>
+
 					<!--main action 기능 보이기 -->
 					<div class="main-action-area-list">
 						<div class="calout">
@@ -91,35 +92,35 @@
 							<div class="content">content</div>
 						</div>
 						<div class="list">
-							<div class="notice-item">
-								<div class="notice-icon"></div>
-								<div class="notice-content">
-									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
-									<div class="notice-create">2025-01-01</div>
+							<div class="main-item">
+								<div class="icon"></div>
+								<div class="content">
+									<div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="create">2025-01-01</div>
 								</div>
 							</div>
 
-							<div class="notice-item">
-								<div class="notice-icon"></div>
-								<div class="notice-content">
-									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
-									<div class="notice-create">2025-01-01</div>
+							<div class="main-item">
+								<div class="icon"></div>
+								<div class="content">
+									<div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="create">2025-01-01</div>
 								</div>
 							</div>
 
-							<div class="notice-item">
-								<div class="notice-icon"></div>
-								<div class="notice-content">
-									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
-									<div class="notice-create">2025-01-01</div>
+							<div class="main-item">
+								<div class="icon"></div>
+								<div class="content">
+									<div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="create">2025-01-01</div>
 								</div>
 							</div>
 
-							<div class="notice-item">
-								<div class="notice-icon"></div>
-								<div class="notice-content">
-									<div class="notice-title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
-									<div class="notice-create">2025-01-01</div>
+							<div class="main-item">
+								<div class="icon"></div>
+								<div class="content">
+									<div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+									<div class="create">2025-01-01</div>
 								</div>
 							</div>
 						</div>
@@ -184,6 +185,7 @@
 
 
     <script>
+        /* 배경 cube 생성 */
         function cubes() {
             let container = document.querySelector('.background-container');
 
@@ -209,6 +211,7 @@
             activeRandomCube();
         }
 
+        /* 랜덤 큐브 활성화 */
         function activeRandomCube() {
             let spans = document.querySelectorAll(' .cube span');
             setInterval(() => {
@@ -224,6 +227,141 @@
         }
 
         cubes();
+
+
+        //주요 기능 event 처리하기
+        function mainActionList() {
+            let mainActionList = document.querySelectorAll  ('.main-action-area-content-item');
+            mainActionList.forEach(item => {
+                item.addEventListener('click', function(e) {
+                    mainActionListEvent(e);
+                });
+            });
+        }
+
+        mainActionList();
+
+        noticeEvent(); // 공지사항 보이기
+
+        function mainActionListEvent(e) {
+            const type = e.target.getAttribute('data-type');
+
+            switch(type) {
+                case 'notice':
+                    noticeEvent();
+                    break;
+                case 'intro':
+                    break;
+                case 'chat':
+                    break;
+                case 'board':
+                    boardEvent();
+                    break;
+            }
+        }
+        
+        //notice event처리하기
+        function noticeEvent() {
+            console.log('noticeEvent');
+            let notice = document.querySelector('.main-action-area-list .list');
+            const title = document.querySelector('.main-action-area-list .calout .title');
+            title.innerHTML = '공지사항';
+
+            //클릭 했을 때, 아래의 html테그들을 5개 생성해줘
+            let html = `
+            <div class="main-item">
+                <div class="icon notice"></div>
+                <div class="content">
+                    <div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon notice"></div>
+                <div class="content">
+                    <div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon notice"></div>
+                <div class="content">
+                    <div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon notice"></div>
+                <div class="content">
+                    <div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon notice"></div>
+                <div class="content">
+                    <div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            `;
+
+            notice.innerHTML = html;
+
+        }
+
+
+        //board event처리하기
+        function boardEvent() {
+            console.log('boardEvent');
+            let board = document.querySelector('.main-action-area-list .list');
+            const title = document.querySelector('.main-action-area-list .calout .title');
+            title.innerHTML = '게시판';
+
+            //클릭 했을 때, 아래의 html테그들을 5개 생성해줘
+            let html = `
+            <div class="main-item">
+                <div class="icon board"></div>
+                <div class="content">
+                    <div class="title">게시글 입니다.</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon board"></div>
+                <div class="content">
+                    <div class="title">게시글 입니다.</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon board"></div>
+                <div class="content">
+                    <div class="title">게시글 입니다.</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon board"></div>
+                <div class="content">
+                    <div class="title">게시글 입니다.</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="icon board"></div>
+                <div class="content">
+                    <div class="title">게시글 입니다.</div>
+                    <div class="create">2025-01-01</div>
+                </div>
+            </div>
+            `;
+
+            board.innerHTML = html;
+
+        }
+
+        
     </script>
 	
 </body>
