--- a/src/css/main.html
+++ b/src/css/main.html
@@ -92,7 +92,10 @@
 							<div class="content">content</div>
 						</div>
 						<div class="list">
-							<div class="main-item">
+
+                            <!-- 공지사항 보이기 -->
+
+							<!-- <div class="main-item">
 								<div class="icon"></div>
 								<div class="content">
 									<div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
@@ -122,8 +125,10 @@
 									<div class="title">공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기공지사항 입니다. 글자 길이 테스트 하기</div>
 									<div class="create">2025-01-01</div>
 								</div>
-							</div>
-						</div>
+							</div> -->
+
+                            
+						</div> <!-- end / main-action-area-list -->
 
 
 					</div>
