Feat: 메인 페이지, 영화 목록

--- a/src/css/main.html
+++ b/src/css/main.html
@@ -147,7 +147,172 @@
 
 
 					</div>
-				</div>
+				</div> <!-- end / main-action-area -->
+
+
+                <div class="main-page-content"> <!-- 영화, 도서, 음악 등 컨첸츠 item box 전체 영역 -->
+
+                    <div class="main-page-content-box"> <!-- 영화, 도서, 음악 등 컨첸츠 각 행, item box 전체 영역 -->
+                        <div class="main-page-content-box-title">영화 목록</div>
+                        <div class="main-page-content-box-content">
+
+                            <!-- box 1-->
+                            <div class="mainPage-content-box"> <!-- start / mainPage-content-box, item box -->
+                                <div class="imgBx">
+                                    <img src="./img/movie/그녀에게.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div> <!-- end / mainPage-content-box -->
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/래시.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/소픽노이블.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/새벽의모든.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/살아있다.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/버틀쥬스.png">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/반도.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/백두산.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/백두산.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mainPage-content-box">
+                                <div class="imgBx">
+                                    <img src="./img/movie/백두산.jpg">
+                                </div>
+                                <div class="layer layer1"></div>
+                                <div class="layer layer2"></div>
+                                <div class="contentBx">
+                                    <div>
+                                        <h2>Post Title Three</h2>
+                                        <p>Lorem ipsum dolor sit amet, 
+                                        consequat.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div> <!-- end / main-page-content  전체 영역 -->
+
+
 			</div>
 
 
