Feat: footer 생성 준비

--- a/src/css/main.html
+++ b/src/css/main.html
@@ -574,6 +574,38 @@
 		
 	</div> <!-- end / main-container -->
 
+    <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-subject">ProJect 명</div>
+                <p class="footer-content">Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개
+                    Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개
+                    Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개
+                    Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개
+                    Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개
+                </p>
+                <div class="footer-btn">
+                    <!-- 버튼 1 -->
+                    <div class="btn">
+                        <div class="btn-icon">
+                        </div>
+                        <span class="btn-text">MyPick-Server GitHub</span>
+                    </div>
+
+                    <!-- 버튼 2 -->
+                    <div class="btn">
+                        <div class="btn-icon">
+                        </div>
+                        <span class="btn-text">MyPick-Front GitHub</span>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-img">
+                <img src="./img/mypick-logo.png">
+            </div>
+        </div>
+    </footer>
+
 
     
 
