Update: button css 정정

--- a/src/css/main.html
+++ b/src/css/main.html
@@ -614,7 +614,12 @@
                     Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개
                     Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개 Project 간단 소개
                 </p>
-                
+            </div>
+
+            <div class="footer-content-btn">
+                <div class="footer-content-btn-item">
+
+                </div>
             </div>
             
         </div>
